# Maize

./: .gitignore  .gitmodules  CMakeLists.txt  Maize.sln
Maize/: CMakeLists.txt  Maize.vcxproj  Maize.vcxproj.filters
Maize/imgui/: imconfig.h
Maize/include/Core/: AnimationClip.h  Application.h  Colour.h  Point.h  PointF.h  Rect.h  Renderer.h  SoundClip.h  Sprite.h  Texture.h  Window.h
Maize/include/EntitySystems/: AnimationSystem.h  AudioSystem.h  PhysicsSystem.h  RenderingSystem.h  TestCollisionEvent.h
Maize/include/Math/: RectF.h  Vec2.h  Vec2Int.h  Vec2UInt.h
Maize/include/Renderer/: Renderer.h  Sprite.h  Texture.h
Maize/include/Scene/: Asset.h  AssetManager.h  CollisionContactListener.h  Components.h  InputHandler.h  Scene.h  SoundManager.h  SpriteSheetManager.h
Maize/include/Scene/Systems/: AnimationSystem.h  AudioSystem.h  ISystem.h  PhysicsSystem.h  RenderingSystem.h  System.h  TestCollisionEvent.h
Maize/src/: Main.cpp  Maize.h  mpch.h
Maize/src/Core/: AnimationClip.cpp  Application.cpp  Colour.cpp  Point.cpp  PointF.cpp  Rect.cpp  RectF.cpp  Renderer.cpp  Window.cpp
Maize/src/EntitySystems/: AnimationSystem.cpp  AudioSystem.cpp  PhysicsSystem.cpp  RenderingSystem.cpp
Maize/src/Maize/Audio/: AudioClip.cpp  AudioClip.h  AudioSource.cpp  AudioSource.h
Maize/src/Maize/Core/: AnimationClip.cpp  AnimationClip.h  Application.cpp  Application.h  Colour.cpp  EntryPoint.h  Input.cpp  Input.h  KeyCode.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  MouseCode.h  Window.cpp  Window.h
Maize/src/Maize/Debug/: Log.cpp  Log.h
Maize/src/Maize/EntitySystems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderingSystem.cpp  RenderingSystem.h
Maize/src/Maize/Events/: Event.h  EventDispatcher.h  InputPollingLayer.cpp  InputPollingLayer.h  KeyEvent.h  KeyEvents.h  MouseEvent.h  MouseEvents.h  WindowEvents.h
Maize/src/Maize/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Maize/src/Maize/Layers/: GameLayer.cpp  GameLayer.h  InputLayer.cpp  InputLayer.h
Maize/src/Maize/Math/: Math.h  Point.cpp  Point.h  PointF.cpp  PointF.h  Rect.cpp  Rect.h  RectF.cpp  RectF.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h
Maize/src/Maize/Physics/: Physics.cpp  Physics.h  PhysicsContactListener.cpp  PhysicsContactListener.h  PhysicsDebugDraw.cpp  PhysicsDebugDraw.h  PhysicsEngine.cpp  PhysicsEngine.h
Maize/src/Maize/Renderer/: Animation.cpp  Animation.h  Camera.h  Colour.cpp  Colour.h  EditorCamera.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteNew.cpp  SpriteNew.h  Texture.h  TexturePacker.cpp  TexturePacker.h  TexturePacking.cpp  TexturePacking.h
Maize/src/Maize/Scene/: AnimationSystem.h  CameraSystem.h  CollisionContactListener.cpp  CollisionContactListener.h  CollisionSystem.cpp  CollisionSystem.h  Components.h  Entity.h  InputHandler.h  LocalToWorldSystem.cpp  LocalToWorldSystem.h  RenderingSystem.cpp  RenderingSystem.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SoundManager.cpp  SoundManager.h  SpriteSheetManager.cpp  SpriteSheetManager.h  System.h
Maize/src/Maize/Scene/Systems/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  HierarchySystem.cpp  HierarchySystem.h  LocalToWorldSystem.h  RenderingSystem.cpp  RenderingSystem.h  TilemapRendering.cpp  TilemapRendering.h
Maize/src/Maize/Tilemap/: CartesianGrid.cpp  CartesianGrid.h  Tile.h  TilemapLayer.cpp  TilemapLayer.h  TilemapSerializer.cpp  Tileset.cpp  Tileset.h  TilesetSerializer.cpp  TilesetSerializer.h
Maize/src/Maize/Tilemap/Serialization/: TilemapSerializer.cpp  TilemapSerializer.h  TilesetSerializer.cpp  TilesetSerializer.h
Maize/src/Maize/Tools/: Assert.h  Log.cpp  Log.h  PlatformDetection.h
Maize/src/Maize/Utils/: FileDialog.cpp  FileDialog.h  Physics.cpp  Physics.h  Random.cpp  Random.h  SystemNotify.cpp  SystemNotify.h  Vector2.cpp  Vector2Int.cpp
Maize/src/Maize/Utils/Grids/: CartesianGrid.h  VertexGrid.cpp  VertexGrid.h
Maize/src/Math/: Point.cpp  PointF.cpp  Rect.cpp  RectF.cpp
Maize/src/Renderer/: Renderer.cpp
Maize/src/Scene/: CollisionContactListener.cpp  SoundManager.cpp  SpriteSheetManager.cpp
Maize/src/Scene/Systems/: AnimationSystem.cpp  AudioSystem.cpp  PhysicsSystem.cpp  RenderingSystem.cpp
MaizeOil/: CMakeLists.txt  MaizeOil.vcxproj  MaizeOil.vcxproj.filters  imgui.ini
MaizeOil/Saves/: Test0.tileset  Test1.tileset  TestMapName.tilemap
MaizeOil/src/: CameraShakeSystem.cpp  CameraShakeSystem.h  CartesianGrid.cpp  CartesianGrid.h  LevelEditor.h  MaizeOilApp.cpp  Playground.h  Sandbox.h
MaizeOil/src/TilemapEditor/: TilemapEditorHelper.cpp  TilemapEditorHelper.h  TilemapEditorTile.h  TilemapEditorWindow.cpp  TilemapEditorWindow.h  TilemapWindow.cpp  TilemapWindow.h  TilemapWindowTab.cpp  TilemapWindowTab.h  Tileset.cpp  Tileset.h  TilesetWindowTab.cpp  TilesetWindowTab.h
MaizeOil/src/TilemapEditor/Tilemap/: Tilemap.cpp  Tilemap.h  TilemapLayer.cpp  TilemapLayer.h  TilemapSerializer.cpp  TilemapSerializer.h  TilemapWindowTab.cpp  TilemapWindowTab.h
MaizeOil/src/TilemapEditor/Tileset/: Tile.h  TileAtlas.cpp  TileAtlas.h  Tileset.cpp  Tileset.h  TilesetManager.h  TilesetSerializer.cpp  TilesetSerializer.h  TilesetWindow.cpp  TilesetWindow.h  TilesetWindowTab.cpp  TilesetWindowTab.h
